✨ feat(signing): add field form drawer and progress dots for submitter UX
Changes made in this commit:

- Modified: docs/FRONTEND_COMPONENTS.md, docs/README.md, internal/handlers/api/events.go, internal/handlers/api/signing_links.go, internal/routes/api_routes.go, web/bun.lockb, web/package.json, web/src/components/common/FieldInput.vue, web/src/components/field/inputs/SelectInput.vue, web/src/components/field/inputs/SignatureInput.vue, web/src/i18n/locales/*.json, web/src/pages/Dashboard.vue, web/src/pages/SubmissionStatus.vue, web/src/pages/Submissions.vue, web/src/pages/SubmitterSign.vue
- Added: web/src/components/common/FieldProgressDots.vue, web/src/components/signing/FieldFormDrawer.vue

Key changes:

- Add FieldFormDrawer: bottom drawer with current field form, progress dots, prev/next
- Add FieldProgressDots: clickable dots for field navigation on signing page
- Refactor SubmitterSign to use drawer and progress dots; improve layout and keyboard support
- Update signing-links API handlers and remove POST submitters/:id/reset route
- Adjust events API handler
- Add signing-related i18n keys across locales
- Update SubmissionStatus, Submissions, Dashboard and field inputs (Select, Signature, FieldInput)
- Update docs: README and FRONTEND_COMPONENTS with new components and structure

--- a/web/src/i18n/locales/de.json
+++ b/web/src/i18n/locales/de.json
@@ -27,7 +27,8 @@
     "complete": "Abgeschlossen",
     "optional": "Optional",
     "download": "Herunterladen",
-    "deleted": "Gelöscht"
+    "deleted": "Gelöscht",
+    "reasonLabel": "Grund:"
   },
   "status": {
     "draft": "Entwurf",
@@ -149,6 +150,8 @@
     "dangerTitle": "Gefahrenbereich",
     "declineWarning": "Durch das Ablehnen wird dieses Dokument als abgelehnt markiert und Sie können möglicherweise nicht weiter unterschreiben.",
     "declineConfirm": "Möchten Sie dieses Dokument wirklich ablehnen?",
+    "declineReasonLabel": "Benachrichtigen Sie den Absender mit dem Grund Ihrer Ablehnung",
+    "declineReasonPlaceholder": "Grund angeben (optional)",
     "resetConfirm": "Alle Felder zurücksetzen? Dadurch werden Ihre Eingaben auf dieser Seite gelöscht.",
     "completedTitle": "Dokument unterschrieben!",
     "completedThanks": "Vielen Dank, dass Sie dieses Dokument unterschrieben haben.",
@@ -178,9 +181,6 @@
     "submissionNotFound": "Einreichung nicht gefunden",
     "submitFailed": "Senden fehlgeschlagen",
     "declineFailed": "Ablehnen fehlgeschlagen",
-    "resetStatus": "Status zurücksetzen",
-    "resetStatusConfirm": "Diesen Unterzeichner wieder auf „ausstehend“ setzen? Er kann über denselben Link erneut unterschreiben.",
-    "resetStatusFailed": "Status konnte nicht zurückgesetzt werden",
     "links": "Unterschriftslinks",
     "linksTitleWithTemplate": "Unterschriftslinks — {template}",
     "copyLink": "Link kopieren",
