--- a/web/src/i18n/locales/ru.json
+++ b/web/src/i18n/locales/ru.json
@@ -28,7 +28,8 @@
     "optional": "Необязательно",
     "download": "Скачать",
     "continue": "Продолжить",
-    "deleted": "Удалено"
+    "deleted": "Удалено",
+    "reasonLabel": "Причина:"
   },
   "status": {
     "draft": "Черновик",
@@ -150,6 +151,8 @@
     "dangerTitle": "Опасная зона",
     "declineWarning": "Отклонение пометит документ как отклонённый, и вы не сможете продолжить подписание.",
     "declineConfirm": "Вы уверены, что хотите отклонить этот документ?",
+    "declineReasonLabel": "Уведомите отправителя о причине отклонения",
+    "declineReasonPlaceholder": "Укажите причину (необязательно)",
     "resetConfirm": "Сбросить все поля? Это очистит введённые данные на этой странице.",
     "completedTitle": "Документ подписан!",
     "completedThanks": "Спасибо за подписание этого документа.",
@@ -179,9 +182,6 @@
     "submissionNotFound": "Отправка не найдена",
     "submitFailed": "Не удалось отправить",
     "declineFailed": "Не удалось отклонить",
-    "resetStatus": "Сбросить статус",
-    "resetStatusConfirm": "Сбросить этого подписанта обратно в ожидание? Он сможет подписать снова по той же ссылке.",
-    "resetStatusFailed": "Не удалось сбросить статус",
     "links": "Ссылки на подписание",
     "linksTitleWithTemplate": "Ссылки на подписание — {template}",
     "copyLink": "Скопировать ссылку",
