✨ feat(templates): add field description, number defaults and signing UX
Changes made in this commit:
- Modified: docs/README.md, internal/models/template.go,
  web/src/components/common/FieldInput.vue,
  web/src/components/field/Field.vue,
  web/src/components/field/inputs/TextInput.vue,
  web/src/components/signing/FieldFormDrawer.vue,
  web/src/i18n/locales/en.json, web/src/models/template.ts,
  web/src/pages/SubmitterSign.vue

Key changes:
- Add Field.description in backend and Description modal (textarea + optional
  Display title) for all block types on template edit page
- Unify dropdown and input styles (Date-format style) in field settings for
  Number, Signature, Payment, Validation; Number block: default value input,
  Min – Max in one row, raised labels
- Number on signing: initialize default_value, apply format/min/max/step,
  validate min/max, format overlay display (comma, dot, currency); add i18n
  invalidNumber, numberMin, numberMax
- Show field-type icon centered (20×20) in document overlay when field has
  no value
- Extend Field type with title and description; pass number min/max/step
  to FieldInput and TextInput

--- a/web/src/i18n/locales/en.json
+++ b/web/src/i18n/locales/en.json
@@ -181,6 +181,9 @@
     "stampId": "Stamp ID",
     "selectAtLeastOne": "Please select at least one option",
     "fillAllCells": "Fill all cells with exactly one character each",
+    "invalidNumber": "Please enter a valid number",
+    "numberMin": "Value must be at least {min}",
+    "numberMax": "Value must be at most {max}",
     "submissionNotFound": "Submission not found",
     "submitFailed": "Failed to submit",
     "declineFailed": "Failed to decline",
